# CURIRT-main

./: CMakeLists.txt  README.md
soem/: ethercatcoe.c
test/linux/LED_test/: CMakeLists.txt  LED_test.c  rt_led_test.c  xenomai.conf
test/linux/PDO_test/: CMakeLists.txt  position_control.c  position_show.c  torque_control.c  torque_control2.c  velocity_control.c
test/linux/motor_control/: CMakeLists.txt  motor_control.c
test/linux/simple_test/: motor_control.c
test/linux/single_joint_control/: CMakeLists.txt  single_joint_control.c
test/linux/slaveinfo/: slaveinfo.c
